@startuml db_schema
skinparam linetype ortho
skinparam dpi 200

' !theme amiga
' left to right direction
' skinparam BackgroundColor transparent
' skinparam ClassBackgroundColor #1b212c

entity users {
    * id: uuid <<PK>>
    --
    * creation_date: datetime
    * email: varchar
    * password: varchar
}

entity codon_tables {
    * name: varchar <<PK>>
    --
    user_id: uuid <<FK>>
    * creation_date: datetime
    * organism: varchar
}

entity codon_translations {
    * codon_table_name: varchar <<FK>> <<PK>>
    * codon: varchar(3) <<PK>>
    --
    * anticodon: varchar(3)
    * amino_acid: varchar(3)
    * trna_gcn: float
    * corresp_codon: varchar(3)
    * wobble_rate: float
}

entity results {
    * id: uuid <<PK>>
    --
    user_id: uuid <<FK>>
    * creation_date: datetime
    * host_codon_table_name: varchar
    * sequences_native_codon_tables: json
    * mode: varchar
    * slow_speed_threshold: float
    conservation_threshold: float
}

json sequences_native_codon_tables {
    "seq1": "table1",
    "seq2": "table2"
}

' entity results_native_codon_tables {
'     * result_id: uuid <<PK>> <<FK>>
'     * sequence_name: varchar <<PK>>
'     * codon_table_name: varchar <<PK>> <<FK>>
' }
' note right: Many to many relationship\nfor native codon tables\nand sequence names

entity tuned_sequences {
    * id: uuid <<PK>>
    --
    * result_id: uuid <<FK>>
    * name: varchar
    * input: text
    * output: text
    * percentage_identity: float
}

users |o--o{ results
users |o--o{ codon_tables
results ||--o{ tuned_sequences
results |o--{ codon_tables
results ||--|| sequences_native_codon_tables
' results }|--|{ results_native_codon_tables
' codon_tables }|--|{ results_native_codon_tables
codon_tables ||--|{ codon_translations
@enduml